fixed scrollbar (display none) for Chrome

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   scrollbar-width: none;
 }
 
+*::-webkit-scrollbar {
+  /* necessary for Chrome */
+  display: none;
+}
+
 html {
   background: #333;
   box-sizing: border-box;
